@startuml
'https://plantuml.com/class-diagram

' no need to add setters and getters since they're obvious and would clutter the diagram

abstract class Editable
abstract class Publication
interface SaleableItem
interface Serializable
Publication <|-- Editable
Publication <|-- SaleableItem
Publication <|-- Serializable

Book <|-- Publication

SaleableItem : sellCopy()
SaleableItem : getPrice()

Editable : - Scanner input
Editable : + getInput(String)
Editable : + getInput(int)
Editable : + getInput(double)
Editable : + getInput(boolean)
Editable : + getInput(Date)
Editable : + getInput(Enum)
Editable : + abstract edit()
Editable : + abstract initialize()

Publication : - title   : (String)
Publication : - price   : (double)
Publication : - copies  : (int)
Publication : - ISBN-10 : (String)

Publication : + sellCopy()
Publication : + Publication()
Publication : + Publication(title, price, copies, ISBN-10)
Publication : + hashCode()
Publication : + toString()








Book : + hashCode()
Book : + toString()

@enduml